--- a/index.html
+++ b/index.html
@@ -1,1 +1,27 @@
-hi this is Toronto!
+<!DOCTYPE html><a 
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>Toronto</title>
+</head>
+<body>
+        <nav class="nav-container">
+            <div class="nav-left">
+                <ul>
+                    <li><a href="#">Markets</a></li>
+                    <li><a href="#">Partners</a></li>
+                    <li><a href="#">About Us</a></li>
+                    <li><a href="#">Resources</a></li>
+                </ul>
+            </div>
+            <div class="nav-middle">
+                <h1>HH</h1>
+            </div>
+            <div class="nav-right">
+                <a href="#"><button class="nav-button">Get in Touch</button></a>
+            </div>
+        </nav>
+</body>
+</html>
