Added home cover front background image

--- a/index.html
+++ b/index.html
@@ -23,5 +23,9 @@
                 <a href="#"><button class="nav-button">Get in Touch</button></a>
             </div>
         </nav>
+        
+        <div class="home-card">
+            <h1>Toronto</h1>
+        </div>
 </body>
 </html>
