Added the Sales office details sub-card and home-card

--- a/index.html
+++ b/index.html
@@ -26,6 +26,13 @@
         
         <div class="home-card">
             <h1>Toronto</h1>
+            <h2>Outdoor Ads</h2>
+            <div class="sub-card">
+                <h3>Sales Office</h3>
+                <h4>240 Richmond St W,<br>Toronto,<br>ON M5V 2C5<br>647-633-5391</h4>
+                <a href="#"><button class="contact-us-button">Contact Us</button></a>
+            </div>
         </div>
+
 </body>
 </html>
