Revert from nth-child changes

--- a/index.html
+++ b/index.html
@@ -41,20 +41,31 @@
                 <h2>Products</h2>
                 <p>Technology and media solutions for cities,<br> transit systems, air travel, destinations, and<br> other public spaces.</p>
             </div>
+            
+            <div class="right-cards">
+                <div class="transit-card">
+                    <div class="card-title">
+                        <h3>Transit</h3>
+                        <i class="fi fi-rr-bus-alt"></i>
+                    </div>
+                    <div class="expand-text">
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rerum illum optio, inventore ut molestias, debitis ullam laudantium hic consequatur sapiente non nisi fuga quidem odit quam ad aspernatur tempora esse.
+                    </div>
+                </div>
 
-            <div class="transit-card">
-                <h3>Transit</h3>
-                <i class="fi fi-rr-bus-alt"></i>
-            </div>
+                <div class="air-card">
+                    <div class="card-title">
+                        <h3>Air</h3>
+                        <i class="fi fi-rr-plane-alt"></i>
+                    </div>
+                </div>
 
-            <div class="air-card">
-                <h3>Air</h3>
-                <i class="fi fi-rr-plane-alt"></i>
-            </div>
-
-            <div class="programmatic-card">
-                <h3>Programmatic</h3>
-                <i class="fi fi-rr-browser"></i>
+                <div class="programmatic-card">
+                    <div class="card-title">
+                        <h3>Programmatic</h3>
+                        <i class="fi fi-rr-browser"></i>
+                    </div>
+                </div>
             </div>
             
         </section>
