Made few accordian collapse cards changes -not working though lol

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>Toronto</title>
 </head>
 <body>
+    <script src="app.js"></script>
+
         <nav class="container">
             <div class="nav-left">
                 <ul>
@@ -41,33 +43,49 @@
                 <h2>Products</h2>
                 <p>Technology and media solutions for cities,<br> transit systems, air travel, destinations, and<br> other public spaces.</p>
             </div>
-            
+
             <div class="right-cards">
                 <div class="transit-card">
-                    <div class="card-title">
+                    <button class="card-title">
                         <h3>Transit</h3>
                         <i class="fi fi-rr-bus-alt"></i>
-                    </div>
+                    </button>
                     <div class="expand-text">
-                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rerum illum optio, inventore ut molestias, debitis ullam laudantium hic consequatur sapiente non nisi fuga quidem odit quam ad aspernatur tempora esse.
+                        <p>
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rerum illum optio, inventore ut molestias, debitis ullam laudantium hic consequatur sapiente non nisi fuga quidem odit quam ad aspernatur tempora esse.
+                        </p>
                     </div>
                 </div>
 
                 <div class="air-card">
-                    <div class="card-title">
+                    <button class="card-title">
                         <h3>Air</h3>
                         <i class="fi fi-rr-plane-alt"></i>
+                    </button>
+                    <div class="expand-text">
+                        <p>
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rerum illum optio, inventore ut molestias, debitis ullam laudantium hic consequatur sapiente non nisi fuga quidem odit quam ad aspernatur tempora esse.
+                        </p>
                     </div>
                 </div>
 
                 <div class="programmatic-card">
-                    <div class="card-title">
+                    <button class="card-title">
                         <h3>Programmatic</h3>
                         <i class="fi fi-rr-browser"></i>
+                    </button>
+                    <div class="expand-text">
+                        <p>
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rerum illum optio, inventore ut molestias, debitis ullam laudantium hic consequatur sapiente non nisi fuga quidem odit quam ad aspernatur tempora esse.
+                        </p>
                     </div>
                 </div>
             </div>
             
+        </section>
+
+        <section class="museum-photo">
+
         </section>
 
 </body>
