Added the billboard images and arranged the cards accordingly

--- a/index.html
+++ b/index.html
@@ -84,7 +84,14 @@
             
         </section>
 
-        <section class="museum-photo">
+        <section class="museum-photo"></section>
+
+        <section class="billboards">
+            <div class="bb1"></div>
+            <div class="bb2"></div>
+            <div class="bb3"></div>
+        </section>
+        
 
 </body>
 </html>
