Added the data-cards and it's css styles

--- a/index.html
+++ b/index.html
@@ -86,6 +86,25 @@
 
         <section class="museum-photo"></section>
 
+        <section class="data-cards">
+            <div class="card1">
+                <h5>Toronto's reach per week</h5>
+                <h1>91%</h1>
+            </div>
+            <div class="card2">
+                <h5>Digital displays in Toronto</h5>
+                <h1>270+</h1>
+            </div>
+            <div class="card3">
+                <h5>monthly CTA ridership</h5>
+                <h1>32mm</h1>
+            </div>
+            <div class="card4">
+                <h5>Increase in digital displays </h5>
+                <h1>43%</h1>
+            </div>
+        </section>
+
         <section class="billboards">
             <div class="bb1"></div>
             <div class="bb2"></div>
