Added the torontohighlights card

--- a/index.html
+++ b/index.html
@@ -86,6 +86,20 @@
 
         <section class="museum-photo"></section>
 
+        <section class="highlights">
+            <div>
+                <h2>Toronto Highlights</h2>
+                <p>
+                    As one of North America's most innovative media <br>
+                    companies, we leverage the power of creative <br>
+                    excellence, unbeatable locations, and technology <br>
+                    driven smart audience data to change the game for <br>
+                    advertisers.
+                </p>
+            </div>
+            <a href="#"><button class="media-kit-button">Download Media Kit</button></a>
+        </section>
+
         <section class="data-cards">
             <div class="card1">
                 <h5>Toronto's reach per week</h5>
