--- a/index.html
+++ b/index.html
@@ -124,6 +124,34 @@
             <div class="bb2"></div>
             <div class="bb3"></div>
         </section>
+
+        <section class="footer">
+            <div class="col1">
+                <h3>Media</h3>
+                <a href="#"><h5>Digital OOH</h5></a>
+                <a href="#"><h5>Billboards</h5></a>
+                <a href="#"><h5>Street Furniture</h5></a>
+                <a href="#"><h5>Place-based</h5></a>
+                <a href="#"><h5>Social OOH</h5></a>
+            </div>
+            <div class="col2">
+                <h3>About</h3>
+                <a href="#"><h5>Leadership</h5></a>
+                <a href="#"><h5>Partners</h5></a>
+                <a href="#"><h5>Sustainability</h5></a>
+                <a href="#"><h5>Investors</h5></a>
+            </div>
+            <div class="col3">
+                <h3>Resources</h3>
+                <a href="#"><h5>Blog</h5></a>
+                <a href="#"><h5>Media Kits</h5></a>
+                <a href="#"><h5>Case Studies</h5></a>
+                <a href="#"><h5>Specs</h5></a>
+            </div>
+            <div class="col4">
+                <h3>Connect with us</h3>
+            </div>
+        </section>
         
 
 </body>
