Collapsible for car-titles under products section fixed

--- a/index.html
+++ b/index.html
@@ -8,8 +8,6 @@
     <title>Toronto</title>
 </head>
 <body>
-    <script src="app.js"></script>
-
         <nav class="container">
             <div class="nav-left">
                 <ul>
@@ -49,7 +47,7 @@
                     <h3>Transit</h3>
                     <i class="fi fi-rr-bus-alt"></i>
                 </button>
-                <div class="expand-text">
+                <div class="content">
                     <p>
                         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rerum illum optio, inventore ut molestias, debitis ullam laudantium hic consequatur sapiente non nisi fuga quidem odit quam ad aspernatur tempora esse.
                     </p>
@@ -59,7 +57,7 @@
                     <h3>Air</h3>
                     <i class="fi fi-rr-plane-alt"></i>
                 </button>
-                <div class="expand-text">
+                <div class="content">
                     <p>
                         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rerum illum optio, inventore ut molestias, debitis ullam laudantium hic consequatur sapiente non nisi fuga quidem odit quam ad aspernatur tempora esse.
                     </p>
@@ -69,7 +67,7 @@
                     <h3>Programmatic</h3>
                     <i class="fi fi-rr-browser"></i>
                 </button>
-                <div class="expand-text">
+                <div class="content">
                     <p>
                         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rerum illum optio, inventore ut molestias, debitis ullam laudantium hic consequatur sapiente non nisi fuga quidem odit quam ad aspernatur tempora esse.
                     </p>
@@ -152,7 +150,8 @@
                 </button></a>
             </div>
         </section>
-        
 
+        <script src="app.js"></script>
+                
 </body>
 </html>
