--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/2.6.0/uicons-regular-rounded/css/uicons-regular-rounded.css'>
+    <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/2.6.0/uicons-thin-rounded/css/uicons-thin-rounded.css'>
     <title>Toronto</title>
 </head>
 <body>
@@ -47,17 +48,36 @@
                     <h3>Transit</h3>
                     <i class="fi fi-rr-bus-alt"></i>
                 </button>
-                <div class="content">
-                    <p>
-                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rerum illum optio, inventore ut molestias, debitis ullam laudantium hic consequatur sapiente non nisi fuga quidem odit quam ad aspernatur tempora esse.
-                    </p>
+                <div class="content-box">
+                    <div class="content">
+                        <button class="box">
+                            <i class="fi fi-tr-arrow-small-right"></i>
+                            <span>Interior Bus</span>
+                        </button>
+                        <button class="box">
+                            <i class="fi fi-tr-arrow-small-right"></i>
+                            <span>Rail Station Media</span>
+                        </button>
+                        <button class="box">
+                            <i class="fi fi-tr-arrow-small-right"></i>
+                            <span>Digital Displays</span>
+                        </button>
+                        <button class="box">
+                            <i class="fi fi-tr-arrow-small-right"></i>
+                            <span>Interior Rail</span>
+                        </button>
+                        <button class="box">
+                            <i class="fi fi-tr-arrow-small-right"></i>
+                            <span>Exterior Rail</span>
+                        </button>
+                    </div>
                 </div>
 
                 <button class="card-title">
                     <h3>Air</h3>
                     <i class="fi fi-rr-plane-alt"></i>
                 </button>
-                <div class="content">
+                <div class="content-box">
                     <p>
                         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rerum illum optio, inventore ut molestias, debitis ullam laudantium hic consequatur sapiente non nisi fuga quidem odit quam ad aspernatur tempora esse.
                     </p>
@@ -67,7 +87,7 @@
                     <h3>Programmatic</h3>
                     <i class="fi fi-rr-browser"></i>
                 </button>
-                <div class="content">
+                <div class="content-box">
                     <p>
                         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rerum illum optio, inventore ut molestias, debitis ullam laudantium hic consequatur sapiente non nisi fuga quidem odit quam ad aspernatur tempora esse.
                     </p>
@@ -145,7 +165,7 @@
             <div class="contact-section">
                 <h3>Connect with us</h3>
                 <a href="#"><button class="email">
-                    <h3>Email</h3>
+                    <h3>Contact Us</h3>
                     <i class="fi fi-rr-arrow-right"></i>
                 </button></a>
             </div>
