Fixed the collapsible buttons on Products section

--- a/index.html
+++ b/index.html
@@ -44,53 +44,59 @@
             </div>
 
             <div class="right-cards">
-                <button class="card-title">
-                    <h3>Transit</h3>
-                    <i class="fi fi-rr-bus-alt"></i>
-                </button>
-                <div class="content-box">
-                    <div class="content">
-                        <button class="box">
-                            <i class="fi fi-tr-arrow-small-right"></i>
-                            <span>Interior Bus</span>
-                        </button>
-                        <button class="box">
-                            <i class="fi fi-tr-arrow-small-right"></i>
-                            <span>Rail Station Media</span>
-                        </button>
-                        <button class="box">
-                            <i class="fi fi-tr-arrow-small-right"></i>
-                            <span>Digital Displays</span>
-                        </button>
-                        <button class="box">
-                            <i class="fi fi-tr-arrow-small-right"></i>
-                            <span>Interior Rail</span>
-                        </button>
-                        <button class="box">
-                            <i class="fi fi-tr-arrow-small-right"></i>
-                            <span>Exterior Rail</span>
-                        </button>
+                <div class="collapsible">
+                    <button class="card-title">
+                        <h3>Transit</h3>
+                        <i class="fi fi-rr-bus-alt"></i>
+                    </button>
+                    <div class="content-box">
+                        <div class="content">
+                            <button class="box">
+                                <i class="fi fi-tr-arrow-small-right"></i>
+                                <span>Interior Bus</span>
+                            </button>
+                            <button class="box">
+                                <i class="fi fi-tr-arrow-small-right"></i>
+                                <span>Rail Station Media</span>
+                            </button>
+                            <button class="box">
+                                <i class="fi fi-tr-arrow-small-right"></i>
+                                <span>Digital Displays</span>
+                            </button>
+                            <button class="box">
+                                <i class="fi fi-tr-arrow-small-right"></i>
+                                <span>Interior Rail</span>
+                            </button>
+                            <button class="box">
+                                <i class="fi fi-tr-arrow-small-right"></i>
+                                <span>Exterior Rail</span>
+                            </button>
+                        </div>
                     </div>
                 </div>
 
-                <button class="card-title">
-                    <h3>Air</h3>
-                    <i class="fi fi-rr-plane-alt"></i>
-                </button>
-                <div class="content-box">
-                    <p>
-                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rerum illum optio, inventore ut molestias, debitis ullam laudantium hic consequatur sapiente non nisi fuga quidem odit quam ad aspernatur tempora esse.
-                    </p>
+                <div class="collapsible">
+                    <button class="card-title">
+                        <h3>Air</h3>
+                        <i class="fi fi-rr-plane-alt"></i>
+                    </button>
+                    <div class="content-box">
+                        <p>
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rerum illum optio, inventore ut molestias, debitis ullam laudantium hic consequatur sapiente non nisi fuga quidem odit quam ad aspernatur tempora esse.
+                        </p>
+                    </div>
                 </div>
 
-                <button class="card-title">
-                    <h3>Programmatic</h3>
-                    <i class="fi fi-rr-browser"></i>
-                </button>
-                <div class="content-box">
-                    <p>
-                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rerum illum optio, inventore ut molestias, debitis ullam laudantium hic consequatur sapiente non nisi fuga quidem odit quam ad aspernatur tempora esse.
-                    </p>
+                <div class="collapsible">
+                    <button class="card-title">
+                        <h3>Programmatic</h3>
+                        <i class="fi fi-rr-browser"></i>
+                    </button>
+                    <div class="content-box">
+                        <p>
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rerum illum optio, inventore ut molestias, debitis ullam laudantium hic consequatur sapiente non nisi fuga quidem odit quam ad aspernatur tempora esse.
+                        </p>
+                    </div>
                 </div>
             </div>
             
