--- a/index.html
+++ b/index.html
@@ -81,9 +81,11 @@
                         <i class="fi fi-rr-plane-alt"></i>
                     </button>
                     <div class="content-box">
-                        <p>
-                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rerum illum optio, inventore ut molestias, debitis ullam laudantium hic consequatur sapiente non nisi fuga quidem odit quam ad aspernatur tempora esse.
-                        </p>
+                        <div class="content2">
+                            <p>
+                                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rerum illum optio, inventore ut molestias, debitis ullam laudantium hic consequatur sapiente non nisi fuga quidem odit quam ad aspernatur tempora esse.
+                            </p>
+                        </div>
                     </div>
                 </div>
 
@@ -93,9 +95,11 @@
                         <i class="fi fi-rr-browser"></i>
                     </button>
                     <div class="content-box">
-                        <p>
-                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rerum illum optio, inventore ut molestias, debitis ullam laudantium hic consequatur sapiente non nisi fuga quidem odit quam ad aspernatur tempora esse.
-                        </p>
+                        <div class="content2">
+                            <p>
+                                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rerum illum optio, inventore ut molestias, debitis ullam laudantium hic consequatur sapiente non nisi fuga quidem odit quam ad aspernatur tempora esse.
+                            </p>
+                        </div>
                     </div>
                 </div>
             </div>
